--- a/affinitic/skin/static/manifest.cfg
+++ b/affinitic/skin/static/manifest.cfg
@@ -4,3 +4,6 @@ description = Affinitic skin
 
 [theme:overrides]
 directory = overrides
+
+[theme:parameters]
+getrightimagecontent = context/@@getRightImageContent
